Release 2.4.0-dev
=================


Release 2.3.7
=============

Bugs fixed
----------

- ggplot2's "guides" were missing


Release 2.3.6
=============

Bugs fixed
----------

- Several reports of segfault on OS X (since rpy2-2.3.1 - PR #109)

- More fixes in converting `DataFrames` with dates from `pandas`


Relase 2.3.5
============

Bugs fixed
----------

- Missing mapping to ggplot2's `scale_shape_discrete` function

- Constructor for POSIXct improved (and fixed)

Changes
-------

- Python 3-only. Python 2 is no longer supported.

- The function :func:`set_writeconsole` and func:`get_writeconsole` are
  now called :func:`set_writeconsoleex` and func:`get_writeconsoleex`.
  The callback function must have a signature like `(message, messagetype)`
  (see the documentation for details) (#contributed by bbruce)

New features
------------

- New module :mod:`rpy2.interactive.ipython` (so far plotting
  automatically a ggplot2 figure in the iPython's console)

- It is now possible to set the :attr:`rclass`.

- :class:`rpy2.robjects.BytesVector`, the `robjects` representation of
  the :class:`rpy2.rinterface.ByteSexpVector`


Relase 2.3.4
============

Bugs fixed
----------

- Spurious error when running unit tests with Python 3 and numpy
  installed

- Missing mapping to ggplot2's `geom_dotplot` function

- Warnings are not longer printed (see Changes below)

Changes
-------

- Bumped target version of ggplot2 to 0.9.3.1

- Warnings are not longer printed. The C-level function in R became
  hidden in R-3.0, and the cost of an R-level check/print is relatively
  high if the R code called is very short. This might evolve into
  printing warnings only if interactive mode in Python (if this can
  be checked reliably).


Release 2.3.3
=============

Bug fixed
---------

- Some of the data.frames converted from :mod:`pandas` were triggering
  a :class:`TypeError` when calling :func:`repr`

- In :mod:`rpy2.robjects.lib.ggplot2`, a mapping to `coord_fixed` was